main/nginx: upgrade to 1.28.0

--- a/main/nginx/APKBUILD
+++ b/main/nginx/APKBUILD
@@ -44,11 +44,11 @@
 pkgname=nginx
 # NOTE: Upgrade only to even-numbered versions (e.g. 1.14.z, 1.16.z)!
 # Odd-numbered versions are mainline (development) versions.
-pkgver=1.26.3
-pkgrel=4
+pkgver=1.28.0
+pkgrel=0
 # Revision of nginx-tests to use for check().
-_tests_hgrev=898407c62387
-_njs_ver=0.8.9
+_tests_rev=d964853731321ed99827916355dff54d983e57c0
+_njs_ver=0.8.10
 # if this isn't set higher than testing/openresty that comes first for some reason
 # even though this has a higher version..
 provider_priority=100
@@ -92,7 +92,7 @@ pkggroups="$_grp_ngx $_grp_www"
 install="$pkgname.pre-install $pkgname.post-install $pkgname.pre-upgrade $pkgname.post-upgrade"
 subpackages="$pkgname-debug $pkgname-doc $pkgname-openrc $pkgname-vim::noarch"
 source="https://nginx.org/download/nginx-$pkgver.tar.gz
-	$pkgname-tests-$_tests_hgrev.tar.gz::https://hg.nginx.org/nginx-tests/archive/$_tests_hgrev.tar.gz
+	$pkgname-tests-$_tests_rev.tar.gz::https://github.com/nginx/nginx-tests/archive/$_tests_rev.tar.gz
 	$pkgname-njs-$_njs_ver.tar.gz::https://github.com/nginx/njs/archive/$_njs_ver.tar.gz
 	no-werror.patch
 	traffic-accounting-nginx-module~disable-stream-module.patch
@@ -181,12 +181,12 @@ _add_module() {
 _add_module "devel-kit" "v0.3.3" "https://github.com/vision5/ngx_devel_kit"
 _devel_kit_so="ndk_http_module.so"
 
-_add_module "dynamic-healthcheck" "1.3.7" "https://github.com/ZigzagAK/ngx_dynamic_healthcheck"
+_add_module "dynamic-healthcheck" "1.3.8" "https://github.com/ZigzagAK/ngx_dynamic_healthcheck"
 _dynamic_healthcheck_depends="$pkgname-mod-stream"
 # See https://github.com/ZigzagAK/ngx_dynamic_healthcheck/issues/12
 _dynamic_healthcheck_so="ngx_http_dynamic_healthcheck_module.so"
 
-_add_module "dynamic-upstream" "2.3.3" "https://github.com/ZigzagAK/ngx_dynamic_upstream"
+_add_module "dynamic-upstream" "2.3.4" "https://github.com/ZigzagAK/ngx_dynamic_upstream"
 _dynamic_upstream_depends="$pkgname-mod-stream"
 # See https://github.com/ZigzagAK/ngx_dynamic_upstream/issues/11
 _dynamic_upstream_so="ngx_http_dynamic_upstream_module.so"
@@ -259,7 +259,7 @@ _add_module "http-untar" "v1.1" "https://github.com/ajax16384/ngx_http_untar_mod
 
 _add_module "http-upload" "2.3.0" "https://github.com/fdintino/nginx-upload-module"
 
-_add_module "http-upload-progress" "v0.9.3" "https://github.com/masterzen/nginx-upload-progress-module"
+_add_module "http-upload-progress" "v0.9.4" "https://github.com/masterzen/nginx-upload-progress-module"
 _http_upload_progress_so="ngx_http_uploadprogress_module.so"
 
 _add_module "http-upstream-fair" "0.1.3" "https://github.com/itoffshore/nginx-upstream-fair"
@@ -268,7 +268,7 @@ _add_module "http-upstream-jdomain" "1.5.2" "https://github.com/nicholaschiasson
 
 _add_module "http-vod" "1.33" "https://github.com/kaltura/nginx-vod-module"
 
-_add_module "http-vts" "v0.2.3" "https://github.com/vozlt/nginx-module-vts"
+_add_module "http-vts" "v0.2.4" "https://github.com/vozlt/nginx-module-vts"
 _http_vts_so="ngx_http_vhost_traffic_status_module.so"
 
 _add_module "http-zip" "1.3.0" "https://github.com/evanmiller/mod_zip"
@@ -404,7 +404,7 @@ package() {
 	chown root:root "$pkgdir"/usr/sbin/nginx
 
 	install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
-	install -Dm644 README "$pkgdir"/usr/share/doc/$pkgname/README
+	install -Dm644 README.md "$pkgdir"/usr/share/doc/$pkgname/README.md
 
 	install -Dm644 objs/$pkgname.8 "$pkgdir"/usr/share/man/man8/$pkgname.8
 
@@ -513,9 +513,9 @@ getvar() {
 }
 
 sha512sums="
-cd780e495796bf7413e54a6730d11d55127b0ca6563acf5c75eb2698f62cddbbf5ba61820c57b2316c0bb789fcfd17f98a27a84b525ed50f304d1b1043ffa05d  nginx-1.26.3.tar.gz
-286ff08049162c2fea18bbafa540eb2b38718e5861075e3984000003ffbdbf1ca882bec1bc92afd62d57c27c7d01246259a2a027bc616e15d0a6553dd21d3843  nginx-tests-898407c62387.tar.gz
-5c7b1f441450fe3282021c4722de889f52d81b2f446c7fbe21961a66ac12b0a899076550244081d522887919cc00d22558b8fe990e8c519a25c9696e6eb35050  nginx-njs-0.8.9.tar.gz
+07d1ef078a73009c2aff0a5729a57f58f26512b71377715ef72cecdb249ef2ff69dd44df3d755a1de2a2721ee604e8a6cfac30a4cf8a45f0890b1746b68ee4d5  nginx-1.28.0.tar.gz
+f71782e7a033d30d26d68cf7cef5f8c298cd4eae01352180f60d48c2108208f8456e4a892d2cabd5fe5cb5769a45d6c49aa74da3a0345375fd7905d6206561b1  nginx-tests-d964853731321ed99827916355dff54d983e57c0.tar.gz
+71bcd596383ff501514adcf9baa0fd4d5cd0d3b53b2cdeee7e64b094ba12f6ee0f8fe99849dd8ad71afb6212566253ebdca2b83713d026ddfed3fe7902a5e906  nginx-njs-0.8.10.tar.gz
 c89fab6d3d4226e37f2a8d2122d825046fc9a787e464fc75351a19fbda5b47016ddb907e0a61241a007304af921e11a0715895ba7b6d4c1112afe816177ed02a  no-werror.patch
 09ec9f18323197eafa55ff68e8c836ad3dd830e6cd3bd4aeaf34e179ef3f72f734a0117288c1c58813aff59f3f1f0f29ccd772a672e17551e7a4fd0693a89c92  traffic-accounting-nginx-module~disable-stream-module.patch
 5a7e72fc6ade460b725e6b91d5eafeb2792ad9832fbdb84ed868bd9a25d43116e42877df587b5f3885a1e38769f072ed4e8605393aca672d61bc71dd106d392b  traffic-accounting-nginx-module~fix-memory-leak.patch
@@ -543,8 +543,8 @@ c209a220b6afc9354a1c4c39817199327425485b3da44778d632cdfd1d95b8412c58ba9b27a5c965
 ee10a5687740dde0c3d18d8b3555f49fcdc6abfc0a3bc2de1de3be0e99951a346fe8027d916aab73071ecd4e2c50871e7c867aca3a7a0fd16e3374c5caed1c57  nginx.initd
 0b9b9ed01ac077e334c034faa2679f6e26740fb3362eebf8cef82d22b2af2a3faaa53bae3c9e14af51cbf64720a7c66431905ca5cc43f978366456cc4e3b7f4a  nginx.confd
 a255e3a4a9b902b3e15140dc88bbbb152b0a9cdc64604152de41e1b254e81aa2a1e2c95c06cb4905c1520886acf9070031d63913b53fe98b034f8adad2bccf61  ngx_devel_kit-0.3.3.tar.gz
-6b38cfb1e401ff5df310032dc8f9f1e7e15fea0cf09876c3c410e2568846ab539b8a3a6b4daa109be5890c134e04c523d26facb00caa791eac2296bdd0bf89f4  ngx_dynamic_healthcheck-1.3.7.tar.gz
-f451533205e5a781bfafea360fbb33d2e7df03f88bd55d6bea8469863eacbd5a2b2a60720ddcc0d0e07b8e60852ce04850b3b3b1d583f4b3af1cec973b0a02a0  ngx_dynamic_upstream-2.3.3.tar.gz
+fb8be1ed4786cf2adb7e06fb94b532465c905057902ffdebb59dc29a14d05b1e2490e15df7060a6cd0686475c3dd75684b7f2d45372cef5ccff1d822b075b1fe  ngx_dynamic_healthcheck-1.3.8.tar.gz
+8763570fdf5ec46c486ec1b2fdfb88e321faa97f89eb762f2c9f097fa5328671dd988f1d41b3915a3defd4f430e7b8e9b1e4ae28548146eb5255a0f9def81cd6  ngx_dynamic_upstream-2.3.4.tar.gz
 0df34c3765e18dc5cc5a053d3a17dbee17a686a1f6e76ad057c262741c4e4465c66bcef86e627a19258f836cad5f14745bf046fd396b00960ad79ed20c2a07bb  traffic-accounting-nginx-module-2.0.tar.gz
 bc72158856a1be18a26ee04c6b5b0f0a20bcce688610a493bf31e2a133e7eb12e11f7c18197a09a72b1513f6a08348ee5281b9d5b84cf43603539040ebd23c26  array-var-nginx-module-0.06.tar.gz
 5f77e164eed1cdeb53bf63a21b84d94c140e996def50244400f25154ce7503cc75d60ee83970f7def384d1e62b816c9c5949b3cb3317d7d8bae86187e41c4620  nginx-auth-jwt-0.9.0.tar.gz
@@ -569,11 +569,11 @@ d6ca250db8de93edbd7875afca35e73cecdaf82132d1a7ee933cf94c6b8afa8e629e9e647a9321f2
 3ace47ec7b93af1cbe513ee1c98c51ca7c14bb1824e1d70c0718b6279125fb34451cd41983ef384ea1549685779cba31c4f514f1c48c1fe90e80174b33269e97  ngx_slowfs_cache-1.11.tar.gz
 c3a7dd29c4a4e47d396b19622a290a04d4cceb97c1b8a508bc984eb8c81d17da4bf5789514bb996987f8343bc801ee4457a86a274bde98b49a809afdfc04cbde  ngx_http_untar_module-1.1.tar.gz
 a0da355888398f86a6b5d065e58c05f9e057589ee785be9f515d77d7a020ae5a7b0656f5af30fb3b026f457326db2e26f4fed29026221ec5fc8156ef8586da25  nginx-upload-module-2.3.0.tar.gz
-43361c584207ddab61ddd9266507b0e1c39041b792e99325088b0621a870ff52b3c191becf4c8ad4fba0c7b7ca29a3a12472b95e9c20c0610c50c6ccedb45871  nginx-upload-progress-module-0.9.3.tar.gz
+3463cb3152990a455add607b076db715105e940e3a21b06d81244b86741768377e2e52e13c0ba3bbb99689efbe253063ea75e1d0da292d394fd59044199db887  nginx-upload-progress-module-0.9.4.tar.gz
 8adb7453c27748f4e685e3352e9b318b408da818754dc5b6244e908423941a8ba337561104f6e481f2553cbc0e334dcea73b57f8e810a9d6e974bb69ff8859e5  nginx-upstream-fair-0.1.3.tar.gz
 996e099c6080b67fcd3867cd27791ab52192dea9bafe86c9c01c9a8f73b869782410be51791b2add7789a30de3b47093ccc6894e1df9e1216a90eb47f24f47c2  ngx_upstream_jdomain-1.5.2.tar.gz
 29ef77f1bbdb2410ff317ebdd7434f31b8ec370ae6b617b92e745e87c11bc820b451181d1d2b57156b414348da14ac448b689b32b17ab418144292eda094512d  nginx-vod-module-1.33.tar.gz
-3db4d9399a4c91ca84af892160f364d544ba594d5d4e1eacb2162a53c15229a5e1330127901f702b30ce809c7d45e4197acb601d7d618c99a7463f1f74e14cd4  nginx-module-vts-0.2.3.tar.gz
+89f21e7dfb85c0ddc266113543b8804289b53abd8bb24e2dc380957ee8d2a87958708df073815df4360feb79cdf0dcbe28cc9d10c8846f51004ff43296ddadd3  nginx-module-vts-0.2.4.tar.gz
 8c5dda14da06ef776fe2b496c2f1b80d2c25c9269309aa560a006c369044c52917024a90f897b7212b2409a874bf2e0a3ab2dbc1e10ad84fa64f54f1f4df3d0d  mod_zip-1.3.0.tar.gz
 6feb544face95121ea076db5df8ca34854085b57602e732c7ba427be5e3f2bf668729d45497a2c91212f98ed8a2c347aa8778a54594f5d241e39e094a2556e4c  zstd-nginx-module-0.1.1.tar.gz
 3f8c803221854c4b1a06aadc6313fbfec74bd7179c0ee51d4365b26ffa8875881a6e1e48f777a9c9efbb9170ab7478a82920d5448a2c2df485503d37bb03ab81  nginx-rtmp-module-1.2.2.tar.gz
