community/libqrencode: update source url
Fixes `404 Not Found` error when fetching the source tarball. The
project website's download section now points to the GitHub repository
releases page.

--- a/community/libqrencode/APKBUILD
+++ b/community/libqrencode/APKBUILD
@@ -1,20 +1,18 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libqrencode
 pkgver=4.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Library for encoding QR codes"
 url="https://fukuchi.org/works/qrencode/index.html"
 arch="all"
 license="LGPL-2.1-or-later"
-makedepends="libpng-dev libtool"
+makedepends="autoconf automake libpng-dev libtool"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools"
-source="https://fukuchi.org/works/qrencode/qrencode-$pkgver.tar.bz2"
-builddir="$srcdir/qrencode-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/fukuchi/libqrencode/archive/refs/tags/v$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
-	update_config_guess
-	update_config_sub
+	autoreconf -fi
 }
 
 build() {
@@ -42,4 +40,6 @@ tools() {
 	amove usr/bin/*
 }
 
-sha512sums="981b3242c213e1b40ac88711912dd8c27ea11f3437d1a04b6b226499a6e991a8f0b3b10f818bcc104812192a1dac4ce05f16ecd847a50cb03d4859b84bad89b8  qrencode-4.1.1.tar.bz2"
+sha512sums="
+584106e7bcaaa1ef2efe63d653daad38d4ff436eb4b185a1db3c747169c1ffa74149c3b1329bb0b8ae007903db0a7034aabf135cc196d91a37b5c61348154a65  libqrencode-4.1.1.tar.gz
+"
