--- a/community/py3-greenlet/APKBUILD
+++ b/community/py3-greenlet/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Elizabeth Jennifer Myers <elizabeth@sporksirc.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-greenlet
-pkgver=3.2.0
+pkgver=3.2.1
 pkgrel=0
 pkgdesc="Lightweight in-process concurrent programming"
 url="https://pypi.org/project/greenlet"
@@ -10,9 +10,7 @@ license="MIT"
 makedepends="py3-setuptools python3-dev py3-gpep517 py3-wheel"
 checkdepends="py3-objgraph py3-psutil"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/g/greenlet/greenlet-$pkgver.tar.gz
-	riscv64-fix.patch
-	"
+source="https://files.pythonhosted.org/packages/source/g/greenlet/greenlet-$pkgver.tar.gz"
 builddir="$srcdir/greenlet-$pkgver"
 
 replaces="py-greenlet" # Backwards compatibility
@@ -37,6 +35,5 @@ package() {
 }
 
 sha512sums="
-0a13142bbb9b043a8b6047fdb182b1091dfc8c6da517092ab382b6ae42fbc8d5e4b9d8593d353d1c95dbf7337aa1e4cc946c2638e50e49af4813aee94b07d214  greenlet-3.2.0.tar.gz
-27226c4726645da286320226eb36eb95e91e0d4f22335054d32d1512aa89a5be4397515413e024d422c2b824a7f7efb463aacce2fb7a72206da88f3da26d27ae  riscv64-fix.patch
+75fd697d0bde99c60d4c741c61c1010e2bae659e93661e8ea37f6683c1223422a7f862aa770b80bc3299593a9791ec515fd31797fd36216ed784f4e2f4103420  greenlet-3.2.1.tar.gz
 "
