community/git-absorb: upgrade to 0.7.0

--- a/community/git-absorb/APKBUILD
+++ b/community/git-absorb/APKBUILD
@@ -1,18 +1,24 @@
 # Contributor: Marian Buschsieweke <marian.buschsieweke@posteo.net>
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@posteo.net>
 pkgname=git-absorb
-pkgver=0.6.17
+pkgver=0.7.0
 pkgrel=0
 pkgdesc="Automatically write fixup! commits, similar to hg absort"
 url="https://github.com/tummychow/git-absorb"
 license="BSD-3-Clause"
 arch="all"
 makedepends="
+	asciidoc
 	cargo
 	cargo-auditable
 	libgit2-dev
 	"
-subpackages="$pkgname-doc"
+subpackages="
+	$pkgname-bash-completion
+	$pkgname-fish-completion
+	$pkgname-zsh-completion
+	$pkgname-doc
+"
 options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/tummychow/git-absorb/archive/refs/tags/$pkgver.tar.gz"
 
@@ -25,6 +31,12 @@ prepare() {
 
 build() {
 	cargo auditable build --frozen --release
+
+	target/release/git-absorb --gen-completions bash > git-absorb.bash
+	target/release/git-absorb --gen-completions fish > git-absorb.fish
+	target/release/git-absorb --gen-completions zsh > _git-absorb
+
+	make -C Documentation git-absorb.1
 }
 
 check() {
@@ -33,9 +45,14 @@ check() {
 
 package() {
 	install -Dm755 --target-directory="$pkgdir"/usr/bin target/release/git-absorb
+
+	install -Dm644 git-absorb.bash "$pkgdir"/usr/share/bash-completion/completions/git-absorb
+	install -Dm644 git-absorb.fish "$pkgdir"/usr/share/fish/vendor_completions.d/git-absorb.fish
+	install -Dm644 _git-absorb "$pkgdir"/usr/share/zsh/site-functions/_git-absorb
+
 	install -Dm644 --target-directory="$pkgdir"/usr/share/man/man1 Documentation/git-absorb.1
 }
 
 sha512sums="
-45dd0f25731e4109dd92a3619e33230740beb442fe4ded40b83c66ceaeca8872c18869d0c63e603777ad9533b5411fc2f88e933a201ffde15e10bee498f712e4  git-absorb-0.6.17.tar.gz
+ac748a123e4619bd387438a160c072550fa86b4f321fa6d8a3779bf711035914de09942959fc8e679cb2aa713db7b81c7ff6fd23ff0720c333b7c9824374668a  git-absorb-0.7.0.tar.gz
 "
