--- a/main/ruby/APKBUILD
+++ b/main/ruby/APKBUILD
@@ -5,7 +5,7 @@ pkgname=ruby
 # When upgrading, upgrade also each ruby-<name> aport listed in file
 # gems/bundled_gems. If some aport is missing or not in the main repo,
 # create/move it.
-pkgver=3.3.6
+pkgver=3.3.8
 _abiver="${pkgver%.*}.0"
 pkgrel=0
 pkgdesc="An object-oriented language for quick and easy programming"
@@ -50,6 +50,8 @@ for _i in bigdecimal etc fiddle gdbm io-console irb json; do
 done
 
 # secfixes:
+#   3.3.8-r0:
+#     - CVE-2025-27219
 #   3.3.1-r0:
 #     - CVE-2024-27282
 #     - CVE-2024-27281
@@ -257,7 +259,7 @@ full() {
 }
 
 sha512sums="
-4ae22f5c2a1f7ed84aab7587ff04ce4d9933cffe4347deaef0ab88d22c9780f274c1664a4ee1dd8235bc3cc749be828ffa8db7cb5f5002339a59a599acf3c729  ruby-3.3.6.tar.gz
+c5005ba4019fbae19650a9a9ce139e13608345065da9e2277dbeac9d0ac9e3b07b666816afe7be690088080c8c9cf88a8c372971d429479dcebea80d6c2e3883  ruby-3.3.8.tar.gz
 16fc1f35aee327d1ecac420b091beaa53c675e0504d5a6932004f17ca68a2c38f57b053b0a3903696f2232c5add160d363e3972a962f7f7bcb52e4e998c7315d  test_insns-lower-recursion-depth.patch
 42cd45c1db089a1ae57834684479a502e357ddba82ead5fa34e64c13971e7ab7ad2919ddd60a104a817864dd3e2e35bdbedb679210eb41d82cab36a0687e43d4  fix-get_main_stack.patch
 a77da5e5eb7d60caf3f1cabb81e09b88dc505ddd746e34efd1908c0096621156d81cc65095b846ba9bdb66028891aefce883a43ddec6b56b5beb4aac5e4ee33f  dont-install-bundled-gems.patch
