--- a/main/ruby-net-imap/APKBUILD
+++ b/main/ruby-net-imap/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ruby-net-imap
 _gemname=net-imap
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.4.16
+pkgver=0.4.19
 pkgrel=0
 pkgdesc="Ruby client api for Internet Message Access Protocol"
 url="https://github.com/ruby/net-imap"
@@ -22,6 +22,10 @@ source="https://github.com/ruby/net-imap/archive/v$pkgver/$_gemname-$pkgver.tar.
 	gemspec.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
+
+# secfixes:
+#   0.4.19-r0:
+#     - CVE-2025-27219
 
 prepare() {
 	default_prepare
@@ -59,6 +63,6 @@ doc() {
 }
 
 sha512sums="
-de1a6afba0276f42b51c0f670a356ad22889f2058bb6183c3c9b2ef387c08b7a1e577668506d7ec3b103eb3ad6a945352483c8673147125572af468ad84d5202  net-imap-0.4.16.tar.gz
+dd033e6ba8efb47c2b1c74b2d02c90501152c74f361ab26441a371a2cff72d6344f4f48edeaa1088e4460d1ebd7143d6eb3520ad56d02c28f5c9e878d037477c  net-imap-0.4.19.tar.gz
 0e45fc58a667561a0ecf1db75013c9c33132073e945599d015e7f038684920cc49ae920133044c254a0b68dc25a290735c026ecafe1ffd301e9e436a3eda5d50  gemspec.patch
 "
