main/ruby-net-imap: upgrade to 0.4.19

--- a/main/ruby-net-imap/APKBUILD
+++ b/main/ruby-net-imap/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ruby-net-imap
 _gemname=net-imap
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.4.10
+pkgver=0.4.19
 pkgrel=0
 pkgdesc="Ruby client api for Internet Message Access Protocol"
 url="https://github.com/ruby/net-imap"
@@ -22,6 +22,10 @@ source="https://github.com/ruby/net-imap/archive/v$pkgver/$_gemname-$pkgver.tar.
 	gemspec.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
+
+# secfixes:
+#   0.4.19-r0:
+#     - CVE-2025-27219
 
 prepare() {
 	default_prepare
@@ -59,6 +63,6 @@ doc() {
 }
 
 sha512sums="
-0f05588dc80cef7f121cbb40e2e9ddd6cd44e5ba96ca8451ea32339275d394f1233bc6a8bc30aa1de6852f49a469e0ee64a3821d08e12199e4af51fca4e79ccf  net-imap-0.4.10.tar.gz
-5ea3ff02e7faffc61400df54a7ebfbd7d2c034e135c0211355a0603b587405271a978db8876aaf4f2f06c0247fb55b1ad02b2ec85e536ce3df4480e9e89b69f9  gemspec.patch
+dd033e6ba8efb47c2b1c74b2d02c90501152c74f361ab26441a371a2cff72d6344f4f48edeaa1088e4460d1ebd7143d6eb3520ad56d02c28f5c9e878d037477c  net-imap-0.4.19.tar.gz
+afc9bfce98cc68167c98fbab4b2295bc09f675da65b52fcd4784f41914ae4152c1e655dc6211f1e45b797bdd184944e22cc4731a2c2c25bb4ff26044bc9f167e  gemspec.patch
 "
