main/ruby-net-imap: upgrade to 0.3.9

--- a/main/ruby-net-imap/APKBUILD
+++ b/main/ruby-net-imap/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ruby-net-imap
 _gemname=net-imap
 # Keep version in sync with "Bundled gems" (https://stdgems.org) for the
 # packaged Ruby version.
-pkgver=0.3.4.1
+pkgver=0.3.9
 pkgrel=0
 pkgdesc="Ruby client api for Internet Message Access Protocol"
 url="https://github.com/ruby/net-imap"
@@ -18,6 +18,10 @@ source="https://github.com/ruby/net-imap/archive/v$pkgver/$_gemname-$pkgver.tar.
 	gemspec.patch
 	"
 builddir="$srcdir/$_gemname-$pkgver"
+
+# secfixes:
+#   0.3.9-r0:
+#     - CVE-2025-27219
 
 prepare() {
 	default_prepare
@@ -55,6 +59,6 @@ doc() {
 }
 
 sha512sums="
-30e3ae963d69f4770bb3cb289f916d72e91332a6ee47a4d631efad0339ff23297fa11b4144b62fa7eda9870087987075bdc3d16c0293d83a0d9a7f092ee38115  net-imap-0.3.4.1.tar.gz
-4185c7402f16425c2c62ac074d0bab7406dcd9dd90d969836274e0599cea479501c402eab0d696cffe2afd5f4663434f13df9867811e2e0b14a5bc565d18ab04  gemspec.patch
+0c95056274fd89256dcca0e669bd0f65355e8dc6170cf65c0efe23965a47b6fbba9baaf6034c226e57f377dbb230de36386c6d3b1045f0479c3532ef67f78dbb  net-imap-0.3.9.tar.gz
+e00d372a7acd3e9a3ea1a68ff30d7f82d85442e302c722dc75fdf8ad94e94e6e2b9dc43b28f2aad68bfdc9b0a962087d398c0eaf660140fbf70dc0c95a7ad4da  gemspec.patch
 "
