main/util-linux: move ionice to /bin
This was accidentally dropped in the previous patch that refactored this
bit to move symlinks and stuff.

--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=5
+pkgrel=6
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -170,7 +170,7 @@ package() {
 	# Move some files to /bin to replace busybox symlinks
 	for i in "$pkgdir"/usr/bin/*; do
 		case "${i##*/}" in
-			getopt|rev)
+			ionice|getopt|rev)
 				mv "$i" "$pkgdir"/bin/
 				;;
 			linux32|linux64)
