community/accountsservice: makedepend on dbus-dev
previously it was pulled in by polkit-dev, but that was removed in
77ce154b13a366a8f4ee9be915b72caf0e06a245

Similar to 745c4dc08c5f281514e6fbad86befa3616dc76fe

--- a/community/accountsservice/APKBUILD
+++ b/community/accountsservice/APKBUILD
@@ -10,6 +10,7 @@ license="GPL-3.0-or-later"
 depends_dev="gobject-introspection-dev"
 makedepends="
 	$depends_dev
+	dbus-dev
 	elogind-dev
 	glib-dev
 	meson
