community/networkmanager: backport patch for py3-gobject3 3.52

--- a/community/networkmanager/APKBUILD
+++ b/community/networkmanager/APKBUILD
@@ -87,6 +87,7 @@ source="https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/archive/$
 	$pkgname.initd
 	$pkgname.rules
 	$pkgname-dispatcher.initd
+	py3-gobject3-3.52.patch
 	"
 builddir="$srcdir/NetworkManager-$pkgver"
 
@@ -264,4 +265,5 @@ sha512sums="
 5ac6d11b588c479de9c7e1fef79ed0a2c04dc159a2173636a6a77a2867c839cc1609860756109e9e794f23a02238a6d94834d8fb6fcb81a6be3ef1dbf4a34e6f  networkmanager.initd
 9820ed2ead0af689644842de57657bb10330a1eaff0e85b21ae9913f55e399e47d8b41b0a12956f30de80272b4424c6e55f33acbc88e156879003a260bf576f6  networkmanager.rules
 0b82a5d3d60797fc7106e9e896c3349b64d50cefa43fb54e0cafbf21d418448cf56daaf78f4fac1525e35b4e496e9acec90f0120be5a33995cdf464cb2098013  networkmanager-dispatcher.initd
+d7230a85cbff50a726a319795214314146908907704344f2969c725b54e49eac723eb1fa54d684e35e32f617affc557324f75cc1d76d31d44e0284eae1220e7d  py3-gobject3-3.52.patch
 "
