community/lipstick-asteroidos: makedepend on dbus-glib-dev

--- a/community/lipstick-asteroidos/APKBUILD
+++ b/community/lipstick-asteroidos/APKBUILD
@@ -12,6 +12,7 @@ url="https://github.com/AsteroidOS/lipstick"
 arch="all !armhf"
 license="LGPL-2.1-only"
 depends_dev="
+	dbus-glib-dev
 	bluez-qt5-dev
 	elogind-dev
 	libdsme-dev
