--- a/community/lipstick-asteroidos/APKBUILD
+++ b/community/lipstick-asteroidos/APKBUILD
@@ -44,6 +44,7 @@ subpackages="$pkgname-dbg $pkgname-dev $pkgname-tools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/AsteroidOS/lipstick/archive/refs/tags/$pkgver.tar.gz
 	0001-Drop-Qt-extended-surface.patch
 	0002-Disables-tests-and-doc.patch
+	mlite-0.5.patch
 	"
 options="!check" # Broken
 builddir="$srcdir/lipstick-$pkgver"
@@ -77,4 +78,5 @@ sha512sums="
 e4e65a328bdac7c5a0bfcb8f9bf54f749ab5cb0bf1ef1d5f2829866ff0f7698fcf174c8871d58c700e198a992b3cc0ccfd74eae3d6ab748f51514e4331c51a29  lipstick-asteroidos-2.0.0.tar.gz
 b08c875045ce84beea6bab5c22aafc7eb32668450d3b9ed2163718adedf1f19e16e9d143514882e06da38e720f508924f641a80a654eea0e76af873088c16233  0001-Drop-Qt-extended-surface.patch
 221e2a75d660197364372ea8718ee6b0a476b6f8f413157b8524ec5cca57d45779b02fe7fc433727af2c8e47b52ddc6a784063fe7d1608d98396464935447a78  0002-Disables-tests-and-doc.patch
+68720f7bd889b041e51ef70665bcf486909b3f82d886a2af1d98a9a4a0d2205d79526163cc32e54f787b9db9b927f75c851f251fae038fd450fee95481f3d4ed  mlite-0.5.patch
 "
