--- a/community/py3-decorator/APKBUILD
+++ b/community/py3-decorator/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=py3-decorator
 _pkgname=decorator
-pkgver=5.1.1
-pkgrel=4
+pkgver=5.2.1
+pkgrel=0
 pkgdesc="Python3 Decorator module"
 url="https://github.com/micheles/decorator"
 arch="noarch"
 license="BSD-2-Clause"
 depends="python3"
-makedepends="py3-setuptools"
+makedepends="py3-gpep517 py3-setuptools py3-wheel"
 subpackages="$pkgname-pyc"
 source="https://github.com/micheles/decorator/archive/refs/tags/$pkgver/py3-decorator-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
@@ -18,17 +18,19 @@ replaces="py-decorator" # Backwards compatibility
 provides="py-decorator=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel --wheel-dir .dist --output-fd 3 3>&1 >&2
 }
 
 check() {
-	python3 setup.py test
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 tests/test.py -v
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" .dist/*.whl
 }
 
 sha512sums="
-26bab2c378dc30ae1d688b25ed5c56632df9847e09baa6143a92e2c6376db4125aa044d235c137eebae487b23c756d417ecb2e35be88fa21e05d52a58408bd22  py3-decorator-5.1.1.tar.gz
+2e4d8e79aef229eb9620352dd0d8a938d7353261aa955085880638acc34d88c310143fbf3e0f3518d3ad764975249fb7282dce27f748ef03228de7cc6e461c4b  py3-decorator-5.2.1.tar.gz
 "
