--- a/community/unit/APKBUILD
+++ b/community/unit/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=unit
 pkgver=1.34.2
-pkgrel=1
+pkgrel=2
 pkgdesc="NGINX Unit is a dynamic web application server"
 url="https://unit.nginx.org/"
 arch="all"
@@ -39,6 +39,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/nginx/unit/archive/refs/tags
 	$pkgname.confd
 	$pkgname.logrotate
 	phpver.patch
+	fix-ruby-3.4.patch
+	fix-ssl-shutdown.patch
 	"
 
 for _mod in perl php$_phpver2 php$_phpver3 php$_phpver4 python3 ruby; do
@@ -48,9 +50,6 @@ done
 _modules_dir="/usr/lib/unit/modules"
 
 build() {
-	# TODO: Remove after https://github.com/nginx/unit/issues/1525 is fixed.
-	export CFLAGS="$CFLAGS -Wno-error=deprecated-declarations"
-
 	./configure \
 		--prefix="/usr" \
 		--localstatedir="/var" \
@@ -88,7 +87,6 @@ check() {
 	case "$CARCH" in
 		armhf | armv7) _allow_fail=yes ;; # segfault
 	esac
-	# test_tls_certificate_change - https://github.com/nginx/unit/issues/1600
 	GEM_PATH=$_ruby pytest test --fds-threshold=$_fds -k "
 		not java and not go and not node \
 		and not njs \
@@ -100,7 +98,6 @@ check() {
 		and not test_python_user_group \
 		and not test_ruby_isolation \
 		and not test_settings_send_timeout \
-		and not test_tls_certificate_change \
 	" || [ "$_allow_fail" = yes ]
 }
 
@@ -145,4 +142,6 @@ f30f54d00d1d0fd2e2378574c365bf464bbd9c1b4d14d69aada2bc3b7c2cec3467a499374cd655f2
 f85112726dfcace2b6d94b10669615fef517f5aa10ac858890dd9f5c868a6e2569500f7411f758fcb24c98c9630760d36a74bd33ea510ab0f8ca8cd6cb1fb1e8  unit.confd
 723e465162dfdb31881680200221542add414e54ef4f4f1fc57e91b7b57777dfb21c2eee4727ecbba0c1943bb77a2597cc0225b16e334c38258c296d15b1df74  unit.logrotate
 c1ba0930f1af713c539453278cf9a2f28e12d2e3bdc0e54dd4a48f0ae1295ef9da23a4b7d484a890c4278cc806bc31f42417fea480faf8411a9c9e738e830f4a  phpver.patch
+fd6f0310d5d5f7723765b42e76cbe56b1bb35967932592dc5bd6198c65bda58751a078cf924da3f7b0e110a633ef3e02050daeb9eb63b498c1ca8f94886503b1  fix-ruby-3.4.patch
+42d8c510419868cc13c997e8c340a0143d6f667a90f162adc18c11f56f85de393b3034702686c12e5a96f52350681e6092e4b25a4d8d7ba746f9ad1116c08e70  fix-ssl-shutdown.patch
 "
