--- a/testing/unit-php81/APKBUILD
+++ b/testing/unit-php81/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=unit-php81
 pkgver=1.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="PHP 8.1 module for NGINX Unit"
 url="https://unit.nginx.org/"
 arch="all !loongarch64"
@@ -24,6 +24,7 @@ checkdepends="procps-ng
 #source="https://unit.nginx.org/download/unit-$pkgver.tar.gz
 source="unit-$pkgver.tar.gz::https://github.com/nginx/unit/archive/refs/tags/$pkgver.tar.gz
 	phpver.patch
+	fix-ssl-shutdown.patch
 	"
 builddir="$srcdir/unit-$pkgver"
 
@@ -70,4 +71,5 @@ package() {
 sha512sums="
 f30f54d00d1d0fd2e2378574c365bf464bbd9c1b4d14d69aada2bc3b7c2cec3467a499374cd655f2deb098486d4f2c64be5fd75d9ec4cab2973bb81a2c43097f  unit-1.34.2.tar.gz
 2fe9966f54fd5d23316810b0260d966e2093c303d8a9ecea693971fe2243c579ed5db0e41e01fc01e56801387bd19cc72f5b26c45d21e5d48084e9ded384965b  phpver.patch
+42d8c510419868cc13c997e8c340a0143d6f667a90f162adc18c11f56f85de393b3034702686c12e5a96f52350681e6092e4b25a4d8d7ba746f9ad1116c08e70  fix-ssl-shutdown.patch
 "
