community/py3-webob: build with gpep517, fix running tests
Switch to gpep517 and fix check failure due to `tests_require` being
removed from setuptools.

```
Traceback (most recent call last):
  File "/home/buildozer/aports/community/py3-webob/src/WebOb-1.8.7/setup.py", line 26, in <module>
    setup(
  File "/usr/lib/python3.12/site-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
           ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/site-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
  File "/usr/lib/python3.12/site-packages/setuptools/_distutils/dist.py", line 1002, in run_commands
    self.run_command(cmd)
  File "/usr/lib/python3.12/site-packages/setuptools/dist.py", line 1105, in run_command
    super().run_command(command)
  File "/usr/lib/python3.12/site-packages/setuptools/_distutils/dist.py", line 1021, in run_command
    cmd_obj.run()
  File "/usr/lib/python3.12/site-packages/ptr/__init__.py", line 195, in run
    setattr(dist, attr, getattr(self.distribution, attr))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'Distribution' object has no attribute 'tests_require'. Did you mean: 'extras_require'?
```

--- a/community/py3-webob/APKBUILD
+++ b/community/py3-webob/APKBUILD
@@ -3,12 +3,12 @@
 pkgname=py3-webob
 _pkgname=WebOb
 pkgver=1.8.7
-pkgrel=4
+pkgrel=5
 pkgdesc="A Python WSGI request and response objects"
 url="https://webob.org/"
 arch="noarch"
 license="MIT"
-makedepends="py3-setuptools"
+makedepends="py3-gpep517 py3-setuptools"
 checkdepends="py3-pytest py3-pytest-runner"
 subpackages="$pkgname-pyc"
 source="https://files.pythonhosted.org/packages/source/W/WebOb/WebOb-$pkgver.tar.gz
@@ -19,16 +19,23 @@ replaces="py-webob" # Backwards compatibility
 provides="py-webob=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 check() {
-	python3 setup.py pytest --addopts "--ignore=docs"
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
-sha512sums="ff6a1ce796a59d9c078dc908a0d6307a080230a5c806be2278eebcbb78016bed43067e78e3e4a6d72a5f51184c137e8267ac75cbb92b057db008b51a792ff489  WebOb-1.8.7.tar.gz
-5e5243dc1662805ae46787a6b2c101d2b1f7cd8124848671e84e9f2a0d7a558c0d7ae0555f9b8dc4eade9525bf842085e2b92782636d4b9d36c47485f984bbbb  python-3.9.patch"
+sha512sums="
+ff6a1ce796a59d9c078dc908a0d6307a080230a5c806be2278eebcbb78016bed43067e78e3e4a6d72a5f51184c137e8267ac75cbb92b057db008b51a792ff489  WebOb-1.8.7.tar.gz
+5e5243dc1662805ae46787a6b2c101d2b1f7cd8124848671e84e9f2a0d7a558c0d7ae0555f9b8dc4eade9525bf842085e2b92782636d4b9d36c47485f984bbbb  python-3.9.patch
+"
