--- a/community/py3-webob/APKBUILD
+++ b/community/py3-webob/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-webob
-_pkgname=WebOb
-pkgver=1.8.7
-pkgrel=5
+_pkgname=webob
+pkgver=1.8.9
+pkgrel=0
 pkgdesc="A Python WSGI request and response objects"
 url="https://webob.org/"
 arch="noarch"
@@ -11,8 +11,7 @@ license="MIT"
 makedepends="py3-gpep517 py3-setuptools"
 checkdepends="py3-pytest py3-pytest-runner"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/W/WebOb/WebOb-$pkgver.tar.gz
-	python-3.9.patch"
+source="https://files.pythonhosted.org/packages/source/w/webob/webob-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
 replaces="py-webob" # Backwards compatibility
@@ -36,6 +35,5 @@ package() {
 }
 
 sha512sums="
-ff6a1ce796a59d9c078dc908a0d6307a080230a5c806be2278eebcbb78016bed43067e78e3e4a6d72a5f51184c137e8267ac75cbb92b057db008b51a792ff489  WebOb-1.8.7.tar.gz
-5e5243dc1662805ae46787a6b2c101d2b1f7cd8124848671e84e9f2a0d7a558c0d7ae0555f9b8dc4eade9525bf842085e2b92782636d4b9d36c47485f984bbbb  python-3.9.patch
+ed5d91f864572b4bbeaa2aa6ada98285d597f83bc14613e62defb6fd6617986aa63534f0962d8045866471f8dfa09c803a5f2105efb84e5f618db6eeb804b9a1  webob-1.8.9.tar.gz
 "
