main/ocaml5: make tests more likely to pass when resources are limited

--- a/main/ocaml5/APKBUILD
+++ b/main/ocaml5/APKBUILD
@@ -73,7 +73,13 @@ check() {
 	make ocamltest
 	local i; for i in $(seq 0 5); do
 		[ $i -eq 0 ] || msg "Retrying ($i/5)..."
-		make -C testsuite parallel && return 0
+		if [ $i -lt 3 ]; then
+			make -C testsuite parallel && return 0
+		else
+			# If tests don't succeed after 3 retries, assume we
+			# don't have enough resources to run them parallelly
+			make -C testsuite all && return 0
+		fi
 		sleep 5
 	done
 	return 1
