community/zef: build with install-dist.raku & fix running tests
  - install-dist.p6 no longer exists

  - specify test files extension as .rakutest
    (defaults to .t if unspecified)

--- a/community/zef/APKBUILD
+++ b/community/zef/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=zef
 pkgver=0.22.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Raku / Perl6 Module Management"
 url="https://github.com/ugexe/zef"
 arch="all"
@@ -14,11 +14,11 @@ subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ugexe/zef/archive/v$pkgver.tar.gz"
 
 check() {
-	prove -e 'raku -Ilib'
+	prove -e 'raku -Ilib' --ext .rakutest
 }
 
 package() {
-	RAKUDO_RERESOLVE_DEPENDENCIES=0 /usr/share/rakudo/tools/install-dist.p6 \
+	RAKUDO_RERESOLVE_DEPENDENCIES=0 /usr/share/rakudo/tools/install-dist.raku \
 		--to="$pkgdir"/usr/share/rakudo/vendor --for=vendor
 	rm "$pkgdir"/usr/share/rakudo/vendor/bin/zef-j \
 		"$pkgdir"/usr/share/rakudo/vendor/bin/zef-m
