community/libmicrohttpd: enable all tests

--- a/community/libmicrohttpd/APKBUILD
+++ b/community/libmicrohttpd/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libmicrohttpd
 pkgver=1.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="small C library that is supposed to make it easy to run an HTTP server as part of another application"
 url="https://www.gnu.org/software/libmicrohttpd/"
 arch="all"
@@ -14,7 +14,7 @@ makedepends="gnutls-dev"
 checkdepends="curl-dev"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-$pkgver.tar.gz
-	disable-test-tricky-url.patch
+	fix-test-tricky-url.patch
 	"
 
 build() {
@@ -47,5 +47,5 @@ package() {
 
 sha512sums="
 c99b8b93cae5feee8debcc5667ee3ff043412a84b30696fe852e6c138f3c890bb43c8fcd7199f1d2f809d522fef159e83b607c743d6cf3401a57050fbdf9b5c1  libmicrohttpd-1.0.1.tar.gz
-c237747aa72e0360410ce42d4048492a9121d7e62ff12406778eefa91b05861f5caf2c179a6d9d37a709ff0ae6d4213a81005968917c40cd0c5da9a225dcdcfa  disable-test-tricky-url.patch
+25f2ae9834dddc52d9735b23a67e44926a24ece8dac40f3520e681b1475c47d18056d793465607433961186c1cf5e1c3368f4e2b2b9b9ce3c022256c82746372  fix-test-tricky-url.patch
 "
