--- a/community/lyrebird/APKBUILD
+++ b/community/lyrebird/APKBUILD
@@ -5,8 +5,7 @@ pkgver=0.6.0
 pkgrel=1
 pkgdesc="pluggable transport proxy for Tor, implementing obfs4"
 url="https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird"
-# loongarch64: github.com/templexxx/cpu@v0.1.0/cpu.go: undefined array length CacheLineSize or missing type constraint
-arch="all !loongarch64"
+arch="all"
 license="BSD-3-Clause"
 makedepends="go"
 source="$pkgname-$pkgver.tar.bz2::https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird/-/archive/lyrebird-$pkgver/lyrebird-lyrebird-$pkgver.tar.bz2"
