community/py3-biopython: drop maintainership
a65b512cdca74f71535f3fc459a24042860d65d7 is their only contribution,
this saves us having to remember or look up their activity and
probability to approve merge requests for this aport.

--- a/community/py3-biopython/APKBUILD
+++ b/community/py3-biopython/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Charles Pritchard <chuck@jumis.com>
-# Maintainer: Charles Pritchard <chuck@jumis.com>
+# Maintainer:
 pkgname=py3-biopython
 pkgver=1.85
 pkgrel=0
