main/icu: don't specify make jobs on install
Parallel install seems to be fine. Also -4 bytes :)

--- a/main/icu/APKBUILD
+++ b/main/icu/APKBUILD
@@ -93,7 +93,7 @@ check() {
 }
 
 package() {
-	make -j1 DESTDIR="$pkgdir" install
+	make DESTDIR="$pkgdir" install
 
 	install -Dm644 "$srcdir"/icu/license.html -t "$pkgdir"/usr/share/licenses/icu/
 }
