--- a/testing/cosmic-store/APKBUILD
+++ b/testing/cosmic-store/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=cosmic-store
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
 pkgrel=0
 pkgdesc="App store for the COSMIC Desktop Environment"
@@ -22,10 +22,7 @@ makedepends="
 	wayland-dev
 "
 options="net !check"  # fetch dependencies, no tests
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-store/archive/refs/tags/epoch-$_upstreamver.tar.gz
-	0001-backend-mod-drop-malloc_trim-call.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-store/archive/refs/tags/epoch-$_upstreamver.tar.gz"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -47,6 +44,5 @@ package() {
 }
 
 sha512sums="
-076f0542c0496520f88eafc9e489b2e7f56120d1f4b9417e628f2e1ae4743c9f47da8ec36dc8fcd87530b4cb5bde710c94378ca1171d98c6e8ef3004a0cc9a1b  cosmic-store-1.0.0_alpha6.tar.gz
-e36c0b24a854efd239a640d31031d3ec79470aa8bdcdfe367bf36e53878706b73f00f7c17a88055b532cfd7d7372885744a3cf379bb841061c86917c3a7a7120  0001-backend-mod-drop-malloc_trim-call.patch
+e81d273bb9c418b9c380e18322002d84184c934ea465e07259cf2e94647f25f826b446a16bfe622f7a8c614cad5823c24abfab8f9eda693dc9b41b3d23450c9f  cosmic-store-1.0.0_alpha7.tar.gz
 "
