testing/cosmic-greeter: upgrade to 1.0.0_alpha7

--- a/testing/cosmic-greeter/APKBUILD
+++ b/testing/cosmic-greeter/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=cosmic-greeter
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
-pkgrel=1
+pkgrel=0
 pkgdesc="Greeter for the COSMIC Desktop Environment"
 url="https://github.com/pop-os/cosmic-greeter"
 arch="aarch64 x86_64"
@@ -37,6 +37,9 @@ prepare() {
 }
 
 build() {
+	export VERGEN_GIT_COMMIT_DATE="$(date -d @"$SOURCE_DATE_EPOCH" '+%Y-%m-%d')"
+	export VERGEN_GIT_SHA="unknown"
+
 	just build-release --frozen
 }
 
@@ -54,6 +57,6 @@ package() {
 }
 
 sha512sums="
-89f41b240f95bbc866c83b54f662c0700498cc3b5058d6d9052c31437d482968dd0b39292f90093ede8cb51bfbc871dae21afd666ec9ab57ed799c06e67238ef  cosmic-greeter-1.0.0_alpha6.tar.gz
+c220e8b4f1b26f5e1c2d2a3105a67310edd7271a9cafd81f27cabdf7c62e8a61f416b573fada2e3127687f8df11356f0bc901476b7d977819e06a4a53d40ccec  cosmic-greeter-1.0.0_alpha7.tar.gz
 90fe8c7944a76846d9aac3a422994e7987ad24ced1630879bba0123e9346de7049391803f21dbeec364b3e75429decc26191eaae4ea2c2b98fb77d331afb3e59  cosmic-greeter.pam
 "
