--- a/testing/cosmic-session/APKBUILD
+++ b/testing/cosmic-session/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=cosmic-session
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
 pkgrel=2
 pkgdesc="Session manager for the COSMIC Desktop Environment"
@@ -38,12 +38,7 @@ makedepends="
 	wayland-protocols
 "
 options="net !check"  # fetch dependencies, no tests
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-session/archive/refs/tags/epoch-$_upstreamver.tar.gz
-	0001-justfile-use-prefix-in-dconf-profile-path.patch
-	0002-justfile-install-dconf-profile.patch
-	0003-fix-just-wrong-path-for-dconf-profile-in-start-cosmi.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-session/archive/refs/tags/epoch-$_upstreamver.tar.gz"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -64,8 +59,5 @@ package() {
 }
 
 sha512sums="
-bbaab2d7f5e88aaefaa3d893c6b5007820b7dda81fdfa4cdddbb63ecbe122f3e9a360ed27e276da2362af97c6151472d1009f0e0e79c4771161ec181f6777bcb  cosmic-session-1.0.0_alpha6.tar.gz
-ad6c0f6a03aee72e6d23b0105fe5a2cc0a33c5fbbfc216e1533fb01d09a7ee855659cc539c9ea62c91e91d83a19755522890f246dca47d48c40cb7ef8cdb267c  0001-justfile-use-prefix-in-dconf-profile-path.patch
-94813d975d66303b15b07447a3ab919938bdd7794a68234195bc9ca87280df7e71b7c6fcaea1acdaeb65d55b68c47bc325bf0265d7dfebb24a1af11badef4ffc  0002-justfile-install-dconf-profile.patch
-83941b0b6f79485f7cb83c623a8de3e03bd85c11fbf3ebb8df4ef6c70c251f4185de71748bbc6590def83cdb1cb50f4caf90c1d0d5359bb1be28399ab9bc592b  0003-fix-just-wrong-path-for-dconf-profile-in-start-cosmi.patch
+88b5025d52dc6dd965261ff9284e08f5379a6b103e4d4a6a60fa9247428a9a5d60d6c5313775cd3b2fcc914f95863c486a96e2dbe49f196f1bae6406081b15da  cosmic-session-1.0.0_alpha7.tar.gz
 "
