--- a/testing/cosmic-comp/APKBUILD
+++ b/testing/cosmic-comp/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=cosmic-comp
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
 pkgrel=1
 pkgdesc="Compositor for the COSMIC Desktop Environment"
@@ -21,10 +21,7 @@ makedepends="
 	wayland-dev
 "
 options="net"  # fetch dependencies
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-comp/archive/refs/tags/epoch-$_upstreamver.tar.gz
-	0001-kms-protect-against-potential-overflow-of-Duration-w.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/cosmic-comp/archive/refs/tags/epoch-$_upstreamver.tar.gz"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -45,6 +42,5 @@ package() {
 }
 
 sha512sums="
-ac2a2099ce87a12145d0f66bc9f5cead1465542d9b646719e21bc485089fa921edde3c5c8001e7ddd3df136b7e1a54b1f70b0b19471beb54c74771cc3bc0acd8  cosmic-comp-1.0.0_alpha6.tar.gz
-f142086f00a7cd904233f2b05592c83f8b0d4c613d700572528f3a03b76cc8f7545a730d8e2e0d4b61122853d26dde7e2ad59c3764bc4cf4430d49b58360b79c  0001-kms-protect-against-potential-overflow-of-Duration-w.patch
+6dde41de2b3d215068c87318a1f0fd49c73909733cd8a6811f2ede4384a4311d30698dcfb940439b8dbc7e7eae6c28148b4da89f3d65e89d23b12b28e4e592cf  cosmic-comp-1.0.0_alpha7.tar.gz
 "
