--- a/testing/xdg-desktop-portal-cosmic/APKBUILD
+++ b/testing/xdg-desktop-portal-cosmic/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=xdg-desktop-portal-cosmic
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
-pkgrel=1
+pkgrel=0
 pkgdesc="xdg-desktop-portal implementation for the COSMIC Desktop Environment"
 url="https://github.com/pop-os/xdg-desktop-portal-cosmic"
 arch="aarch64 x86_64"
@@ -25,10 +25,7 @@ makedepends="
 	xdg-desktop-portal-dev
 "
 options="net !check"  # fetch dependencies, no tests
-source="
-	$pkgname-$pkgver.tar.gz::https://github.com/pop-os/xdg-desktop-portal-cosmic/archive/refs/tags/epoch-$_upstreamver.tar.gz
-	fix-build-persistmode.patch
-"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pop-os/xdg-desktop-portal-cosmic/archive/refs/tags/epoch-$_upstreamver.tar.gz"
 builddir="$srcdir/$pkgname-epoch-$_upstreamver"
 
 prepare() {
@@ -49,6 +46,5 @@ package() {
 }
 
 sha512sums="
-b2d52aaae4e8e24e3d9ab1750290e82ee8d94a6b71650da7c6d59433cb3d1c3a0ef8e833c43335abd887a785da432a240098a2e8402dc518b78ee3bfb8a22744  xdg-desktop-portal-cosmic-1.0.0_alpha6.tar.gz
-481bd9803b81bdd157d3c196293f5eeea63e03733e7d0a6188e4ca57e98eff63278e2281de4f13e1f3e43ce43168de54cef58b22a35931fe7791a1a27eb7e938  fix-build-persistmode.patch
+ccd1fff8071292e202f36b0aac8a214ccc86c31b52c14ed3970238d9208462fc00eed50422f8ab6b6aba48bfbde7a6504023fd79622be7840c169c71efb1db3f  xdg-desktop-portal-cosmic-1.0.0_alpha7.tar.gz
 "
