testing/cosmic-settings-daemon: upgrade to 1.0.0_alpha7

--- a/testing/cosmic-settings-daemon/APKBUILD
+++ b/testing/cosmic-settings-daemon/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=cosmic-settings-daemon
-pkgver=1.0.0_alpha6
+pkgver=1.0.0_alpha7
 _upstreamver="${pkgver/_alpha/-alpha.}"
 pkgrel=0
 pkgdesc="Settings daemon for the COSMIC Desktop Environment"
@@ -13,6 +13,7 @@ depends="
 	alsa-utils
 	geoclue
 	playerctl
+	pulseaudio-dev
 "
 makedepends="
 	cargo
@@ -40,5 +41,5 @@ package() {
 }
 
 sha512sums="
-eb7761995b7412b930b3d5ff6ae834e9558a72470f52bc1d9f26fec8480a1bce0baa878ea66cd5da3b8d6fd1ceb38b794670699f909af1bb320eac9a09849771  cosmic-settings-daemon-1.0.0_alpha6.tar.gz
+2cc46bff23f6b586231e98770678e6524bfc369f7ffef439c157b7652742d46cca6e951dca713c459dc5729492ce6a5ce5401cdca7738bfaef8eded57254b89a  cosmic-settings-daemon-1.0.0_alpha7.tar.gz
 "
