main/lighttpd: simplify packaging

--- a/main/lighttpd/APKBUILD
+++ b/main/lighttpd/APKBUILD
@@ -74,7 +74,6 @@ package() {
 	install -d -m2750 -o lighttpd -g wheel \
 		"$pkgdir"/var/log/lighttpd/
 	install -d -m755 \
-		"$pkgdir"/etc/lighttpd/ \
 		"$pkgdir"/var/www/localhost/htdocs
 
 	# lighttpd
@@ -86,30 +85,17 @@ package() {
 		"$pkgdir"/etc/logrotate.d/lighttpd
 
 	# config files
-	local i; for i in lighttpd.conf mod_cgi.conf \
-		mod_fastcgi.conf mod_fastcgi_fpm.conf
-	do
-		install -Dm644 "$srcdir"/$i "$pkgdir"/etc/lighttpd/$i
-	done
-}
-
-_mv_mod() {
-	mkdir -p "$subpkgdir"/usr/lib/lighttpd
-	while [ $# -gt 0 ]; do
-		mv "$pkgdir"/usr/lib/lighttpd/$1.so \
-			"$subpkgdir"/usr/lib/lighttpd/
-		shift
-	done
+	install -Dm644 -t "$pkgdir"/etc/lighttpd/ "$srcdir"/*.conf
 }
 
 mod_auth() {
 	pkgdesc="Authentication module for lighttpd"
-	_mv_mod mod_auth
+	amove usr/lib/lighttpd/mod_auth.so
 }
 
 mod_webdav() {
 	pkgdesc="WebDAV module for lighttpd"
-	_mv_mod mod_webdav
+	amove usr/lib/lighttpd/mod_webdav.so
 }
 
 sha512sums="
