--- a/testing/devpod/APKBUILD
+++ b/testing/devpod/APKBUILD
@@ -1,14 +1,17 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=devpod
-pkgver=0.5.21
-pkgrel=2
+pkgver=0.6.15
+pkgrel=0
 pkgdesc="Codespaces but open-source, client-only, and unopinionated"
 url="https://github.com/loft-sh/devpod"
 # ppc64le blocked by undefined references
 # armhf, armv7, x86, loongarch64 and riscv64 blocked by -race not being supported
 arch="x86_64 aarch64 s390x"
 license="MPL-2.0"
-makedepends="go"
+makedepends="
+	go
+	linux-headers
+	"
 checkdepends="
 	bash
 	docker
@@ -32,7 +35,7 @@ package() {
 }
 
 sha512sums="
-8d77c0619cbd9c73ccf37f377e4589274b2276344590fa8bc6749e8bb1ae31696f5235dd0b4aea4896e51412c31a9148fc2d0c35f7430c3c6024dac847f3747a  devpod-0.5.21.tar.gz
+5c304d267b9ef790acec6feb595c09abadf57faa894cf94eeae8a758e900aa333799daf2ef92767dc5cc921bbfe550e3cfb6f41c51cbe0a2e2feb7d22339e13f  devpod-0.6.15.tar.gz
 1cb7c5f4802ff2157de3183372f6bc09900bf9f2a7db49eb8cb470d74c26ee72f4c6f279cd3513aaaa2e97845c638c996f25a1a72f4f34d18b85157ec0b07dd6  0001-devpod-code-oss-binary.patch
 ca3d9bc0fdc00eb2e60484803d502f00e280e291b134cd784ebf627f7d60938f405c89539d45e980c31db2752736f1fb8afe08380ea3fe1cbc20f40c81cdad3e  0002-devpod-busybox-base64-decode.patch
 "
