testing/searchmonkey: remove arch blocks

--- a/testing/searchmonkey/APKBUILD
+++ b/testing/searchmonkey/APKBUILD
@@ -4,7 +4,7 @@ pkgver=0.9.0
 pkgrel=1
 pkgdesc="Powerful GUI search utility for matching regex patterns, GTK version"
 url="https://sourceforge.net/projects/searchmonkey/"
-arch="!s390x !riscv64" # adwaita-icon-theme -> librsvg -> rust
+arch=""
 license="GPL-3.0-or-later"
 depends="adwaita-icon-theme"
 makedepends="gtk+3.0-dev intltool poppler-dev libzip-dev"
