testing/mat2: enable on all arches

--- a/testing/mat2/APKBUILD
+++ b/testing/mat2/APKBUILD
@@ -5,11 +5,12 @@ pkgver=0.13.4
 pkgrel=3
 pkgdesc="Metadata removal tool, supporting a wide range of commonly used file formats"
 url="https://0xacab.org/jvoisin/mat2"
-arch="noarch !s390x !riscv64" #librsvg missing for s390x and riscv64
+arch="noarch"
 license="LGPL-3.0-or-later"
 depends="
 	exiftool
 	gdk-pixbuf
+	gobject-introspection
 	librsvg
 	mailcap
 	poppler-glib
