community/lavalauncher: enable librsvg on all arches

--- a/community/lavalauncher/APKBUILD
+++ b/community/lavalauncher/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=lavalauncher
 pkgver=2.1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Simple launcher panel for Wayland desktops"
 url="https://git.sr.ht/~leon_plickat/lavalauncher"
 license="GPL-3.0-or-later"
@@ -12,6 +12,7 @@ makedepends="
 	cairo-dev
 	wayland-dev
 	wayland-protocols
+	librsvg-dev
 	libxkbcommon-dev
 	scdoc
 	"
@@ -20,12 +21,6 @@ source="$pkgname-v$pkgver.tar.gz::https://git.sr.ht/~leon_plickat/lavalauncher/a
 	fix-svg-icon-scale.patch
 	"
 builddir="$srcdir/$pkgname-v$pkgver"
-
-# enable SVG image support where possible
-case "$CARCH" in
-	s390x|riscv64) ;;
-	*) makedepends="$makedepends librsvg-dev" ;;
-esac
 
 build() {
 	abuild-meson . output
