community/imv: enable on all arches

--- a/community/imv/APKBUILD
+++ b/community/imv/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Steven Guikal <void@fluix.one>
 pkgname=imv
 pkgver=4.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Image viewer for X11/Wayland"
 url="https://sr.ht/~exec64/imv"
-arch="all !s390x" # freeimage-dev
+arch="all"
 license="MIT"
 makedepends="
 	asciidoc
@@ -17,6 +17,7 @@ makedepends="
 	mesa-dev
 	meson
 	pango-dev
+	librsvg-dev
 	sdl2_ttf-dev
 	wayland-dev
 	"
@@ -32,16 +33,6 @@ source="$pkgname-$pkgver.tar.gz::https://git.sr.ht/~exec64/imv/archive/v$pkgver.
 	"
 builddir="$srcdir/$pkgname-v$pkgver"
 
-case $CARCH in
-	s390x|riscv64)
-		_rsvg=""
-		;;
-	*)
-		makedepends="$makedepends librsvg-dev"
-		_rsvg="-Dlibrsvg=enabled"
-		;;
-esac
-
 build() {
 	local _test=enabled
 	if ! want_check; then
@@ -56,7 +47,7 @@ build() {
 		-Dlibpng=disabled \
 		-Dlibjpeg=disabled \
 		-Dlibnsgif=disabled \
-		$_rsvg \
+		-Dlibrsvg=enabled \
 		. output
 	meson compile -C output
 }
