community/tangram: enable on s390x

--- a/community/tangram/APKBUILD
+++ b/community/tangram/APKBUILD
@@ -7,8 +7,7 @@ _troll_commit="53155a02e06ff66e6c15d470f39d782305c1502f"
 pkgdesc="Browser for your pinned tabs"
 url="https://apps.gnome.org/Tangram"
 # armhf: blocked by gjs
-# s390x: blocked by gjs, blueprint-compiler
-arch="noarch !armhf !s390x"
+arch="noarch !armhf"
 license="GPL-3.0-or-later"
 depends="
 	gjs
