testing/video-trimmer: enable on all arches

--- a/testing/video-trimmer/APKBUILD
+++ b/testing/video-trimmer/APKBUILD
@@ -5,9 +5,7 @@ pkgver=0.9.0
 pkgrel=0
 pkgdesc="Trim videos quickly"
 url="https://gitlab.gnome.org/YaLTeR/video-trimmer"
-# s390x, riscv64: blocked by blueprint-compiler
-# loongarch64: blocked by libc crate
-arch="all !s390x !riscv64 !loongarch64"
+arch="all"
 license="GPL-3.0-or-later"
 depends="gst-libav"
 makedepends="
