--- a/community/gjs/APKBUILD
+++ b/community/gjs/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=gjs
 # even number after first dot are the stable releases
 pkgver=1.84.2
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME javascript library"
 url="https://wiki.gnome.org/Projects/Gjs"
 # armhf blocked by mozjs
@@ -36,23 +36,14 @@ build() {
 		;;
 	esac
 
-	case "$CARCH" in
-	riscv64|s390x)
-		local lto=false
-		;;
-	*)
-		local lto=true
-		export LDFLAGS="$LDFLAGS -fuse-ld=lld"
-		;;
-	esac
-
 	CC=clang \
 	CXX=clang++ \
 	CFLAGS="$CFLAGS -O2" \
 	CXXFLAGS="$CXXFLAGS -O2" \
+	LDFLAGS="$LDFLAGS -fuse-ld=lld" \
 	abuild-meson \
 		--buildtype=release \
-		-Db_lto=$lto \
+		-Db_lto=true \
 		-Db_ndebug=true \
 		-Dprofiler=disabled \
 		-Dinstalled_tests=false \
