community/kirigami: use xwayland-run rather than xwfb-run

--- a/community/kirigami/APKBUILD
+++ b/community/kirigami/APKBUILD
@@ -46,7 +46,7 @@ build() {
 }
 
 check() {
-	xwfb-run -- ctest --test-dir build -E "wheelhandler/tst_scrolling.qml"
+	xwayland-run -- ctest --test-dir build -E "wheelhandler/tst_scrolling.qml"
 }
 
 package() {
