community/plasma-desktop: install polkit rules to allow changing date and time

--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=plasma-desktop
 pkgver=6.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="KDE Plasma Desktop"
 # armhf blocked by qt6-qtdeclarative
 # s390x blocked by plasma-workspace
@@ -94,6 +94,7 @@ subpackages="
 _repo_url="https://invent.kde.org/plasma/plasma-desktop.git"
 source="https://download.kde.org/$_rel/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz
 	sddm.conf
+	org.kde.timezone.rules
 	"
 
 build() {
@@ -116,6 +117,8 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" cmake --install build
+
+	install -Dm644 "$srcdir"/org.kde.timezone.rules "$pkgdir"/usr/share/polkit-1/rules.d/org.kde.timezone.rules
 }
 
 knetattach() {
@@ -142,4 +145,5 @@ sddm_breeze() {
 sha512sums="
 4d288be183ac8c7cd3284f80fdf3c922b18aad6e64d60bdf266367994b692de5d511f1b61d093b7509114806b8c334470f5f0e9872b1130327260819eea8bee0  plasma-desktop-6.3.4.tar.xz
 affbeec6d236bf09ae95b7bf478015ead9b5eabcffa8291107e34463bc3f7563c01d4e444e035b7eb575700e64c4da9f5079950b254b8c24b305845f031eb17f  sddm.conf
+1bada9221c309583111c7bcdbc841b771e682957023eefd8b921a9848e19aee27071316aac9cbb712a26ec657c0b024e459e09001efe654d9e72a6d99fe9ee76  org.kde.timezone.rules
 "
