--- a/community/kirigami/APKBUILD
+++ b/community/kirigami/APKBUILD
@@ -26,7 +26,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
-checkdepends="xwayland-run"
+checkdepends="xvfb-run"
 subpackages="$pkgname-dev $pkgname-libs $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kirigami.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kirigami-$pkgver.tar.xz"
@@ -46,7 +46,7 @@ build() {
 }
 
 check() {
-	xwayland-run -- ctest --test-dir build -E "wheelhandler/tst_scrolling.qml"
+	xvfb-run -- ctest --test-dir build -E "wheelhandler/tst_scrolling.qml"
 }
 
 package() {
