community/kcontacts: fix xwayland-run dependency name

--- a/community/kcontacts/APKBUILD
+++ b/community/kcontacts/APKBUILD
@@ -27,7 +27,7 @@ makedepends="$depends_dev
 	qt6-qttools-dev
 	samurai
 	"
-checkdepends="wlheadless-run"
+checkdepends="xwayland-run"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 _repo_url="https://invent.kde.org/frameworks/kcontacts.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kcontacts-$pkgver.tar.xz"
